new oop abroach for page management and Pom best Practices